Fix Indirect Units (Artillery, Rockets)
### The fix
Before, indirect units could move and fire on the same action. They werent supposed to do that, if they move, they cannot fire. That has been fixed now.

### Styling
Some z-indexes have been changed so previous/future elements don't overlap the present UI (like the attack square covering the attack button... can't attack without pressing the button)

And some other buttons have received a hover effect.

### Indirect check
Now the code checks whether an unit is an indirect (arty, rocket or missile) to take into account whether it should show or not show enemy units as possible attacks.

--- a/client/public/style/gameGrid/mapGrid.sass
+++ b/client/public/style/gameGrid/mapGrid.sass
@@ -54,7 +54,7 @@
       //the red square on enemy units
       .tileAttack
         animation: selectTarget 4s linear infinite
-        background: rgba(228, 67, 67, 0.5)
+        background: rgba(228, 67, 67, 0.25)
         border: 2px solid rgb(184, 22, 22)
         z-index: 20
         position: absolute
@@ -73,14 +73,14 @@
 
           50%
             transform: rotate(270deg)
-            background: rgba(228, 67, 67, 0.75)
+            background: rgba(228, 67, 67, 0.85)
           to
             transform: rotate(540deg)
             background: rgba(228, 67, 67, 0.25)
 
 .forecast
   position: absolute
-  z-index: 100
+  z-index: 101
   display: grid
   left: -200%
   right: -200%
